# Julia-IDE-ORB

./: Cargo.toml  README.md
Research/: zed-ai-architecture-julia-fork.md  zed-context-management-research.aux  zed-context-management-research.out  zed-context-management-research.tex  zed-offline-smart-edit-architecture.md  zed-smart-edit-research.aux  zed-smart-edit-research.out  zed-smart-edit-research.tex
assets/agents/: README.md
assets/badge/: v0.json
assets/keymaps/: default-linux.json  default-macos.json  default-windows.json  initial.json
assets/photos/: README.md
assets/settings/: default.json  initial_user_settings.json
crates/agent/: Cargo.toml
crates/agent_memory/: Cargo.toml
crates/agent_memory/src/: agent_memory.rs  bge_generator.rs  embedding.rs  lib.rs  session_memory.rs  sqlite_vector_store.rs  vector_store.rs
crates/auto_update_helper/: build.rs
crates/collab/: README.md
crates/collections/: Cargo.toml
crates/explorer_command_injector/: AppxManifest-Nightly.xml  AppxManifest-Preview.xml  AppxManifest.xml
crates/extension_api/: Cargo.toml  PENDING_CHANGES.md  README.md
crates/gpui/: Cargo.toml  README.md
crates/http_client/: Cargo.toml
crates/icons/: README.md
docs/: AGENT_MEMORY_IMPLEMENTATION_PLAN.md  README.md  WEB_SEARCH_API_KEYS.md  book.toml  web_search_implementation_paper.aux  web_search_implementation_paper.out  web_search_test_prompts.md  web_search_test_results.md
docs/src/: git.md  (+36 more)
nix/: build.nix
script/: bundle-freebsd  bundle-linux  bundle-windows.ps1  snap-build
scripts/: setup_web_search_api_keys.sh
(+399 files in other folders)
